--- a/r-p.s.html
+++ b/r-p.s.html
@@ -10,6 +10,13 @@
 </head>
 <body>
     <h1>Rock, Paper, Scissors</h1>
+    <img src = '/home/nadia/Desktop/rock.png' alt = 'rock'>
+    <button> Rock </button>
+    <img src = '/home/nadia/Desktop/paper.png' alt = 'rock'>
+    <button> Paper </button>    
+    <img src = '/home/nadia/Desktop/scissors.png' alt = 'rock'>
+    <button> Scissors </button>
+
         <script>
         const items = ['rock', 'paper', 'scissors'];
 
@@ -18,6 +25,7 @@
     }
     const computerSelection = computerPlay().toLowerCase();  
     const playerSelection = 'rock';
+    // const playerSelection = window.prompt("Rock, paper or scissors?");
 
     console.log(computerSelection);
     console.log(playerSelection);
@@ -32,8 +40,8 @@
             return "It's a draw!";
         } else if(playerSelection === 'paper' && computerSelection === 'rock') {
             return "You win! Paper beats rock!";
-        } else if(playerSelection === 'paper' && computerSelection === 'rock') {
-            return "You lose! Rock beats paper";
+        } else if(playerSelection === 'paper' && computerSelection === 'scissors') {
+            return "You lose! Scissors beats paper";
         } else if (playerSelection === 'paper' && computerSelection === 'paper') {
             return "It's a draw!"; 
         } else if (playerSelection === 'scissors' && computerSelection === 'paper') {
@@ -46,7 +54,7 @@
     } 
 
     console.log(playRound(playerSelection, computerSelection));
-    
+
     </script>
     
 </body>
