--- a/r-p.s.html
+++ b/r-p.s.html
@@ -33,7 +33,7 @@
     <p>Result goes here</p>
 </div>
 
-    <p id = "action message">Make your move</p>
+    <p id="action-message">Make your move</p>
 
         <script>
         const items = ['rock', 'paper', 'scissors'];
