--- a/r-p.s.html
+++ b/r-p.s.html
@@ -30,7 +30,7 @@
 </div>
 
 <div class="result"> 
-    <p>Result goes here</p>
+    <p>Who dares, wins!</p>
 </div>
 
     <p id="action-message">Make your move</p>
