added package json

--- a/r-p.s.html
+++ b/r-p.s.html
@@ -13,13 +13,13 @@
     </header>
     <div class="choices">
         <div class="choice" id="r">
-                <img src="/rock.png" alt = 'rock'> 
+                <img src='images/rock.png' alt = 'rock'> 
         </div>
         <div class="choice" id="p">
-                <img src='/paper.png' alt = 'paper'>
+                <img src='images/paper.png' alt = 'paper'>
         </div>
         <div class="choice" id="s">
-                <img src='/scissors.png' alt = 'scissors'>
+                <img src='images/scissors.png' alt = 'scissors'>
         </div>
     </div>
 
