ammendments to icons

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     </header>
     <div class="choices">
         <div class="choice" id="r">
-                <img src='images/rock.png' alt = 'rock'> 
+                <img src='images/rock.svg' alt = 'rock'> 
         </div>
         <div class="choice" id="p">
-                <img src='images/paper.png' alt = 'paper'>
+                <img src='images/paper.svg' alt = 'paper'>
         </div>
         <div class="choice" id="s">
-                <img src='images/scissors.png' alt = 'scissors'>
+                <img src='images/scissors.svg' alt = 'scissors'>
         </div>
     </div>
 
@@ -34,6 +34,10 @@
 </div>
 
     <p id="action-message">Make your move</p>
+
+    <div class="wrapper">
+        <button class="resetButton" onClick=window.location.reload()>Reset Game</button>
+    </div>
     <script src="app.js" charset="UTF-8">
     </script>
 
