added rules popup

--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
 
     <div class="wrapper">
         <button class="resetButton" onClick=window.location.reload()>Reset Game</button>
+        <div class="popup">
+            <button class="rulesButton" onClick="popUpRules()">Rules</button>
+            <span class="popuptext" id="myPopup">A Simple Popup!</span>
+        </div>
+
     </div>
     <script src="app.js" charset="UTF-8">
     </script>
