--- a/index.html
+++ b/index.html
@@ -39,7 +39,11 @@
         <button class="resetButton" onClick=window.location.reload()>Reset Game</button>
         <div class="popup">
             <button class="rulesButton" onClick="popUpRules()">Rules</button>
-            <span class="popuptext" id="myPopup">A Simple Popup!</span>
+            <span class="popuptext" id="myPopup">
+                Rock breaks scissors. <br>
+                Scissors cuts paper. <br>
+                Paper covers rock. <br>
+            </span>
         </div>
 
     </div>
